--- a/package.json
+++ b/package.json
@@ -34,6 +34,13 @@
       }
     }
   },
+  "nyc": {
+    "exclude": [
+      "node_modules",
+      "default-keymap.js",
+      "test.js"
+    ]
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/iamstarkov/hyper-keymap.git"
@@ -66,6 +73,7 @@
     "ava": "^0.16.0",
     "eslint": "^3.8.1",
     "eslint-config-pedant": "^0.8.0",
-    "eslint-plugin-require-path-exists": "^1.1.5"
+    "eslint-plugin-require-path-exists": "^1.1.5",
+    "nyc": "^8.3.2"
   }
 }
