--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "ava",
     "lint": "eslint .",
-    "coverage": "nyc ava"
+    "coverage": "nyc ava",
+    "coveralls": "npm run coverage && coveralls < coverage/lcov.info"
   },
   "engines": {
     "node": ">=6.5.0"
