--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "ava",
     "lint": "eslint .",
     "coverage": "nyc ava",
-    "coveralls": "npm run coverage && coveralls < coverage/lcov.info"
+    "coveralls": "npm run coverage -- && coveralls < coverage/lcov.info"
   },
   "engines": {
     "node": ">=6.5.0"
@@ -40,6 +40,10 @@
       "node_modules",
       "default-keymap.js",
       "test.js"
+    ],
+    "reporter": [
+      "text",
+      "lcov"
     ]
   },
   "repository": {
