--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
   },
   "devDependencies": {
     "ava": "^0.16.0",
+    "coveralls": "^2.11.14",
     "eslint": "^3.8.1",
     "eslint-config-pedant": "^0.8.0",
     "eslint-plugin-require-path-exists": "^1.1.5",
