exclude predefined-meny-commands for nyc

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "exclude": [
       "node_modules",
       "default-keymap.js",
+      "predefined-menu-commands.js",
       "test.js"
     ]
   },
