add default nyc reporters

--- a/package.json
+++ b/package.json
@@ -40,6 +40,10 @@
       "default-keymap.js",
       "predefined-menu-commands.js",
       "test.js"
+    ],
+    "reporter": [
+      "text",
+      "lcov"
     ]
   },
   "repository": {
