--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,5 @@ before_script:
   - 'npm run lint'
 after_script:
   - 'npm i -g coveralls'
-  - 'nyc -r lcov -r text ava'
+  - 'nyc ava'
   - 'coveralls < coverage/lcov.info'
